mais issues feitas

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "intervention/image": "^2.3",
         "ext-curl": "*",
         "angelleye/paypal-php-library": "2.0.*",
-        "paypal/rest-api-sdk-php": "*"
+        "paypal/rest-api-sdk-php": "*",
+        "bagwaa/killswitch": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
